# babeltrace2-sys

./: .gitmodules  Cargo.toml  README.md  build.rs
bindgen/: wrapper.h
examples/: decode.rs  encode.rs
patches/: bt_hidden.patch
scripts/: regen-bindings  run-example-with-sanitizer  run-tests  run-tests-with-sanitizer
src/: bindings.rs  clock.rs  common_pipeline.rs  component.rs  component_class.rs  ctf_iterator.rs  ctf_plugin.rs  ctf_stream.rs  env.rs  error.rs  event.rs  ffi.rs  field.rs  graph.rs  lib.rs  logger.rs  message.rs  message_iterator.rs  plugin.rs  port.rs  proxy_plugin.rs  self_component.rs  source_plugin.rs  stream.rs  trace.rs  trace_iterator.rs  util.rs  utils_plugin.rs  value.rs
src/ctf_plugin/: fs.rs  lttng_live.rs  mod.rs
src/internal_api/: mod.rs
src/pipeline/: decoder.rs  encoder.rs  mod.rs
tests/: metadata_packet_decode.rs
