[package]
name = "babeltrace2-sys"
version = "0.2.2"
authors = ["Jon Lamb <jon@auxon.io>"]
edition = "2018"
build = "build.rs"
links = "babeltrace2"
description = "Rust sys crate for babeltrace2"
homepage = "https://babeltrace.org/"
license = "MIT"

[features]
test = []

[build-dependencies]
autotools = "0.2"
pkg-config = "0.3"

[dependencies]
log = "0.4"
uuid = { version = "0.8", features = ["v5"] }
ordered-float = { version = "2.2.0", default-features = false }

[dev-dependencies]
structopt = "0.3"
ctrlc = "3.2"
env_logger = "0.8"
url = "2.1"
