[package]
name = "babeltrace2-sys"
version = "0.3.0"
authors = ["Jon Lamb <jon@auxon.io>"]
edition = "2018"
build = "build.rs"
links = "babeltrace2"
description = "Rust sys crate for babeltrace2"
homepage = "https://babeltrace.org/"
license = "MIT"
repository = "https://github.com/auxoncorp/babeltrace2-sys"
documentation = "https://docs.rs/babeltrace2-sys"

[features]
test = []

[build-dependencies]
autotools = "0.2"
pkg-config = "0.3"

[dependencies]
log = "0.4"
uuid = { version = "1.1.2", features = ["v5"] }
ordered-float = { version = "3.2.0", default-features = false }
libc = "0.2"
thiserror = "1.0"

[dev-dependencies]
structopt = "0.3"
ctrlc = "3.2"
env_logger = "0.9"
url = "2.3"
tempfile = "3.3"
